--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -432,10 +432,10 @@
  EQUIPMENT_PARACHUTE:0 "Parachute"
  EQUIPMENT_SUPPORT:0 "Support"
  EQUIPMENT_ANTI_AIR:0 "Anti-Air"
- EQUIPMENT_ARTIlLERY:0 "Artillery"
+ EQUIPMENT_ARTILLERY:0 "Artillery"
  EQUIPMENT_ANTI_TANK:0 "Anti-Tank"
  EQUIPMENT_ROCKET:0 "Rocket"
- EQUIPMENT_MISSIlE:0 "Guided Missile"
+ EQUIPMENT_MISSILE:0 "Guided Missile"
  EQUIPMENT_LAND:0 "Land Equipment"
  EQUIPMENT_NAVAL:0 "Naval Equipment"
  EQUIPMENT_AIR:0 "Air Equipment"
@@ -5178,7 +5178,7 @@
  REQUESTED_REINFORCEMENT_COLLECTING_ENTRY:0 "   - $NUM|Y0$/$MAX|Y0$ of $NAME|Y$"
  REQUESTED_REINFORCEMENT_DELIVERY_ENTRY:0 "   - $NUM|Y0$ of $NAME|Y$"
  REQUESTED_TIMED_ACTIVITY_COLLECTING_ENTRY:0 "   - $NUM|Y0$/$MAX|Y0$ of $NAME|Y$"
- REQUESTED_MANPOWER_DETAIlS:0 "Next $NUM|Y$ of manpower will arrive in $HR|Y$ hours.\nFull manpower reinforcement roughly in $D|Y$ days."
+ REQUESTED_MANPOWER_DETAILS:0 "Next $NUM|Y$ of manpower will arrive in $HR|Y$ hours.\nFull manpower reinforcement roughly in $D|Y$ days."
  NOT_ENOUGH_MANPOWER_TO_REINFORCE:0 "Not enough manpower to reinforce."
  MANPOWER_REINFORCEMENT_NOT_POSSIBLE:0 "§RManpower reinforcement is not possible at the current location.§!"
  ARCHETYPE_DESC_ENTRY:0 "    - $COUNT|0$ $NAME|H$"
@@ -5579,7 +5579,7 @@
  panzer_iii_ag_equipment_1:0 "StuG III A/B"
  panzer_iii_ag_equipment_1_short:0 "StuG III A/B Med.AG"
  panzer_iii_ag_equipment_1_desc:0 "Medium Assault gun based on the chassis of Panzer III. The StuG III was Germany's most produced armoured fighting vehicle during World War II. It fielded the  7.5 cm StuK 37 L/24 gun which was ideal against soft targets due to the low-velocity thin-shelled HE Shells Sprgr.34 and with the mobility and armor of 50mm the combination proved very successful. It had the same 120 HL TRM engine with 300 HP as the Panzer III."
- #Pz IIIl
+ #Pz IIIL
  panzer_iii_equipment_4:0 "PzKpfw.III Ausf.J/L"
  panzer_iii_equipment_4_short:0 "Panzer III J/L Med.TK"
  panzer_iii_equipment_4_desc:0 "Ausf. J equipped with long 50mm KwK 39 L/60 gun instead of short L/42 was later renamed Ausf.L , hull and turret front armour increased to solid 50 mm plate instead of 2 combined 30mm plates. It got an additional 20 mm spaced armour plates on hull and turret front."
@@ -5828,7 +5828,7 @@
  me_109_fighter_equipment_1_short:0 "Bf 109 A Fighter"
  me_109_fighter_equipment_1_desc:0 "The first version of the Bf 109. While lightly armed with only two machine guns, the aircraft is extremely fast. The later B variant initially added an engine mounted machine gun."
  tech_me_109_fighter_equipment_1:0 "Bf 109 A/B"
- tech_me_109_fighter_equipment_1_desc:0 "While development on the Bf 109 began in 1934, the prototypes are still undergoing testing. We should lend bayerische Flugzeugwerke some of our engineers to help speed along the development of a production version. ( THESE ARE PROTOTYPES, NOT BUIlDABLE - PREREQUISITE FOR NATIONAL FOCUS MESSERSCHMIDT )."
+ tech_me_109_fighter_equipment_1_desc:0 "While development on the Bf 109 began in 1934, the prototypes are still undergoing testing. We should lend bayerische Flugzeugwerke some of our engineers to help speed along the development of a production version. ( THESE ARE PROTOTYPES, NOT BUILDABLE - PREREQUISITE FOR NATIONAL FOCUS MESSERSCHMIDT )."
  me_109_early_fighter_equipment_1:0 "Bayerische Flugzeugwerke 109 B/C"
  me_109_early_fighter_equipment_1_short:0 "Bf 109 B/C Fighter"
  me_109_early_fighter_equipment_1_desc:0 "Produced in early 1937 where the Bf109 first serial production began with the B version ( 341 produced), it was fitted with the 670 HP Jumo 210D engine. The Bf 109 C ( 58 produced) had an increased armament of four 7.92 mm MG 17s in total and an improved engine. Versions were planned with an engine mounted machine gun, as well as replacing the wing mounted machine guns with 20mm MG FF cannon."
@@ -5874,7 +5874,7 @@
  tech_me_109_late_fighter_equipment_3:0 "Bf 109 K"
  tech_me_109_late_fighter_equipment_3_desc:0 "If we pull the best qualities from the many variants of the Bf 109 G, we might be able to create a aircraft that is not only superior, but cheaper."
  tech_he_112_equipment_0:0 "He 112 0"
- tech_he_112_equipment_0_desc:0 "While development on the Bf 109 began in 1934, the prototypes are still undergoing testing. We should lend Heinkel some of our engineers to help speed along the development of a production version. ( THESE ARE PROTOTYPES, NOT BUIlDABLE - PREREQUISITE FOR NATIONAL FOCUS HEINKEL )"
+ tech_he_112_equipment_0_desc:0 "While development on the Bf 109 began in 1934, the prototypes are still undergoing testing. We should lend Heinkel some of our engineers to help speed along the development of a production version. ( THESE ARE PROTOTYPES, NOT BUILDABLE - PREREQUISITE FOR NATIONAL FOCUS HEINKEL )"
  he_112_equipment_1:0 "Heinkel He 112"
  he_112_equipment_1_short:0 "He 112 Fighter"
  he_112_equipment_1_desc:0 "Heinkel's competitor to the Bf 109. It is a light fighter aircraft. Ernst Heinkel's He 112 submission was a scaled down version of the He 70, a fast mail-plane, sharing numerous features with it including; an all metal construction – including it's oval cross-section fuselage and two-spar monoplane wings which were covered with flush-head rivets and stressed metal skin-, similar inverted semi-elliptical gullwings and retractable landing gear. After prototyping and a lot of changes, the V9 (which became the B version) had a maximum speed of up to 485 km/h. Armament was 2 × 7.92 mm MG17 machine guns mounted in the engine cowling and 2 × 20mm Oerlikon MG FF cannons mounted in the outer wing."
