--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -380,7 +380,7 @@
  
  SOV_change_of_course:0 "Change of Course"
  SOV_change_of_course_desc:0 "Our situation is so desperate that even the most basic foundations of our revolutionary strife must be set aside, the yankees have the money and resources to bail our economy and save our industry from imminent doom!"
- 
+
  SOV_breadbasket:0 "Breadbasket of Europe"
  SOV_breadbasket_desc:0 "Ukraine is not likely to rise up anymore, we need to revive the grain production in the vast and fertile plains."
  
@@ -2190,6 +2190,7 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_2_5_year_plan_desc:0 "The great undertakings of the Second Five-Year Plan must be finalized if our country is ever to industrialize, comrade Stalin has demanded that this country shall enter the future and be on an equal footing with our western counterparts."
  SOV_Tolkach:0 "Tolkach"
  SOV_Tolkach_desc:0 "The government organization Tolkach is responsible for the effective execution of the Five-Year Plans, failure to comply will result in the Tolkach stepping in and ensuring that any difficulties are dealt with in a proper fashion."
+ SOV_Tolkach_tt:0 "§CUnlocks decisions to improve our economy!§!"
  SOV_heavy_industry_1:0 "Expansion of Heavy Industry"
  SOV_heavy_industry_1_desc:0 "The rapid expansion of our heavy industry is one of the goals that comrade Stalin has set out for this Five-Year Plan."
  SOV_Improvement_Tools:0 "Ramp up foreign investments"
@@ -2233,14 +2234,19 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_child_mobil_desc:0 "Everyone must commit everything they have to fight off the invader, there is no going back!"
  SOV_pacific_lend_lease:0 "Pacific Lend Lease"
  SOV_pacific_lend_lease_desc:0 "The port in Vladivostok is one of the many ports that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
+ SOV_pacific_lend_lease_tt:0 "§CWe will receive American trucks and trains monthly as long as we hold §GVladivostok§!!§!"
  SOV_arkangelsk_lend_lease:0 "Arkhangelsk Lend Lease"
  SOV_arkangelsk_lend_lease_desc:0 "The port in Arkhangelsk is one of the many ports that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
+ SOV_arkangelsk_lend_lease_tt:0 "§CWe will receive American infantry equipment and field gear monthly as long as we hold §GArkangelsk§!!§!"
  SOV_murmansk_lend_lease:0 "Murmansk Lend Lease"
  SOV_murmansk_lend_lease_desc:0 "The port in Murmansk is one of the many ports that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
+ SOV_murmansk_lend_lease_tt:0 "§CWe will receive American radios, anti-air guns, and anti-tank guns monthly as long as we hold §GMurmansk§!!§!"
  SOV_black_sea_lend_lease:0 "Black Sea Lend Lease"
  SOV_black_sea_lend_lease_desc:0 "The port in Sevastopol is of the many ports that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
+ SOV_black_sea_lend_lease_tt:0 "§CWe will receive American cars and support equipment monthly as long as we hold §GSevastopol§!!§!"
  SOV_persia_lend_lease:0 "Persian Gulf Lend Lease"
  SOV_persia_lend_lease_desc:0 "The Persian Gulf and access through Persia is one of the many routes that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
+ SOV_persia_lend_lease_tt:0 "§CWe will receive American mechanized and tanks monthly as long as we hold §GBaku§!!§!"
  SOV_Beria_Partisans:0 "Beria's Partisans"
  SOV_Beria_Partisans_desc:0 "Beria has organized the resistance behind the lines, he is instilling the occupied Soviet citizens with a hatred for the fascist invaders. They will work behind the lines to disrupt the invaders by destroying supply lines, raiding bases and destroying infrastructure."
  SOV_Expanded_Partisans:0 "TsShPD"
