Soviet Air Rework V5

--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -6840,16 +6840,16 @@
  amph_soviet_tank_equipment_2_desc:0 "Due to the mediocre fighting qualities of the T-37, the T-40 amphibious scout tank was developed as an successor. It was armed with one 12.7 mm (0.5 in) DShK and a secondary 7,62mm DT MG.  A land-based version of the T-40, the T-40S, was produced, although was later redesignated the T-60. The T-60 was cheaper, simpler, better-armed, and could fulfill most of the same roles except of course hadn´t the amphibious capabilities. It had a maximum armour of 13mm and its GAZ-202 engine with 85 HP allowed a maximum road speed of 45 km/h."
 
  # light tanks
- light_soviet_tank_equipment_1:0 "T-26 1931 Lt.TK"
- light_soviet_tank_equipment_1_short:0 "T-26 1931 Light T."
+ light_soviet_tank_equipment_1:0 "T-26 Model 1931 Light Tank"
+ light_soviet_tank_equipment_1_short:0 "T-26 M.1931 Lt.TK."
  light_soviet_tank_equipment_1_desc:0 "The Soviet T-26 was the illegitimate offspring of the successful Vickers Mark E export light tank. This well-balanced, modern and relatively cheap tank immediately drew the attention of Soviet officers, who felt the need to keep in touch with western technologies. The earliest production model was a twin-turret type. Each turret had an observation slit and a round firing port for the DT machine-gun. These turrets existed in four different models and configurations, although still mounted in the same locations, with the same height and generally same features. All had a 240° arc of fire and armor ranging from 13 to 15 mm (0.51-0.59 in), although the very first 1931 models had only 10 mm of mediocre alloy, susceptible to machine-gun fire. The model 1931 (100 units), 1932 (1361) and 1933 (before upgrading - 576) were all twin-turreted versions. About 2038 were built in all. "
  
- light_soviet_tank_equipment_2:0 "T-26 1933 Lt.TK"
- light_soviet_tank_equipment_2_short:0 "T-26 1933 Light TK."
+ light_soviet_tank_equipment_2:0 "T-26 Model 1933 Light Tank"
+ light_soviet_tank_equipment_2_short:0 "T-26 M.1933 Lt.TK."
  light_soviet_tank_equipment_2_desc:0 "In 1933, the Soviets unveiled the T-26 mod. 1933. It had a new single cylindrical turret housing a  45mm L/46 (with a high projectile velocity of 700–800 m/s ) and one 7.62 mm MG, became the most common T-26 variant. The 45mm L/46 was one of the most powerful anti-tank guns of its time and very few  contemporary western tanks had comparable guns. The T-26 could carry up to three secondary DT 7.62mm machine guns in coaxial, rear, and anti-aircraft mounts.  The tank was powered by a T-26 90 HP flat row 4-cylinder air-cooled petrol engine, which was a copy of the Armstrong Siddeley engine used in the Vickers 6-Ton. It weighed 9,6 tons, had a maximum road speed of 32 km/h  and had a maximum frontal armour of 15mm."
  
- light_soviet_tank_equipment_3:0 "T-26 1938 Lt.TK"
- light_soviet_tank_equipment_3_short:0 "T-26 1938 Light TK."
+ light_soviet_tank_equipment_3:0 "T-26 Model 1938 Light Tank"
+ light_soviet_tank_equipment_3_short:0 "T-26 M.1938 Lt.TK."
  light_soviet_tank_equipment_3_desc:0 "In 1938, the T-26 was upgraded to the model´38 version, which had a new conical turret with better protection but the same welded hull as the T-26 mod. 1933. This proved insufficient in the Battle of Lake Khasan in 1938, so the tank was upgraded once more in February 1939 to have an underturret box with sloped (23°) 20 mm armoured plates. The turret featured an armour increase to 20 mm at 18 degrees sloping. This time it was designated T-26-1 (known as the T-26 mod. 1939 in modern sources). There were subsequent attempts to thicken the front plate, but T-26 production soon ended in favour of other designs, such as the T-34."
  
  light_soviet_tank_ag_1:0 "AT-1 Light TD"
@@ -6925,9 +6925,9 @@
  bt_tank_equipment_2_desc:0 "The improved BT-7 Model 1937 had a welded hull, a redesigned hull front and a new Mikulin M-17T engine (a licensed copy of a BMW engine). The 45 mm 20K gun and a DT machine-gun has been mounted at first in cylindrical turret but since 1937, the production of BT-7 with a conical turret begun. Tank armament was left unchanged, its ammunition was increased by additional 44 rounds though. Some tanks (commanders tanks only) had the 71-TK radio instead of additional ammunition. For the effective night shooting two special headlights have been placed on the gun's mantlet. Subsequently all earlier produced tanks were equipped with such headlights. The 4-speed gearbox was replaced with more modern 3-speed. The tank's chassis was improved as well getting a maximum armour of 40mm."
  
  #BT-7 Arty
- light_soviet_tank_art_equipment_0:0 "BT-7 Light Self-Propelled Gun"
- light_soviet_tank_art_equipment_0_short: "BT-7 Lt.SPG"
- light_soviet_tank_art_equipment_0_desc: "The BT-7 Artillery was a fast and mobile infantry support/self-propelled gun version of the ever reliable Soviet BT-7 light or “Cavalry” tank, developed by the design bureau of the Kharkiv Locomotive Factory. BT-7A artillery tanks were produced between 1936 and 1938. These were fitted with a larger turret and a 76 mm KT-type gun with 50 rounds of ammunition (40 in a tank with a portable radio)."
+ light_soviet_tank_art_equipment_0:0 "BT-7A Light Self-Propelled Gun"
+ light_soviet_tank_art_equipment_0_short: "BT-7A Lt.SPG"
+ light_soviet_tank_art_equipment_0_desc: "The BT-7A Artillery was a fast and mobile infantry support/self-propelled gun version of the ever reliable Soviet BT-7 light or “Cavalry” tank, developed by the design bureau of the Kharkiv Locomotive Factory. BT-7A artillery tanks were produced between 1936 and 1938. These were fitted with a larger turret and a 76 mm KT-type gun with 50 rounds of ammunition (40 in a tank with a portable radio)."
  
  tech_t_34_a:0 "T-34 mod.1940"
 
@@ -7661,20 +7661,20 @@
  SOV_CAS_equipment_4_desc:0 "In 1943, Ilyushin started work on a new aircraft, Il-1, which was to be a 1- or 2-seat heavily armoured fighter-interceptor, meant mainly for fighting enemy bombers and transports. The Il-1 was similar to the Il-2 design, but was more modern, compact, and powered with a new Mikulin engine the AM-42. But the VVS gave up the idea of heavy armoured fighters, due to their low speed, which was not enough to intercept modern bombers. As a result, Ilyushin decided to turn the Il-1 into a two-seat ground attack plane, with the designation changed to Il-10 in early 1944. The armament was identical to the Il-2 but all MG´s were later upgraded to 20mm. The Il-10 engine was a 12-cylinder inline V engine Mikulin AM-42 with a power of 1,770 HP allowing a maximum speed of 551 km/h."
  tech_CAS_equipment_4:0 "Il-10"
  tech_CAS_equipment_4_desc:0 "The Il-10 is a ground attack aircraft."
- SOV_cv_fighter_equipment_0:0 "I-15-N Carrier Fighter"
- SOV_cv_fighter_equipment_0_short:0 "I-15-N Carrier Fighter"
+ SOV_cv_fighter_equipment_0:0 "Polikarpov I-15-N Carrier Fighter"
+ SOV_cv_fighter_equipment_0_short:0 "I-15-N CV Fighter"
  SOV_cv_fighter_equipment_0_desc:0 "Although being faster than the e.g. Sea Gladiator but with roughly similar short landing capabilities the I-15bis  was first considered for carrier operations with the planned Imperator Aleksandr but the original I-15 was chosen due to the gulled wings which gave a better frontal visibility  for carrier landings. Aircraft from the final production series  with Shvetsov M-25 engines were chosen and fitted with arrestor-  and catapult hooks.  In addition, they had one more pair of 7.62 mm synchronous PV-1 machine guns than the former I-15 versions.  Stable and handy, with good flight characteristics, exceptional manoeuvrability, and excellent takeoff/landing parameters, the I-15 fighter enjoyed a well-deserved success among pilots."
- SOV_cv_fighter_equipment_1:0 "I-153-N Carrier Fighter"
- SOV_cv_fighter_equipment_1_short:0 "I-153-N Carrier Fighter"
+ SOV_cv_fighter_equipment_1:0 "Polikarpov I-153-N Carrier Fighter"
+ SOV_cv_fighter_equipment_1_short:0 "I-153-N CV Fighter"
  SOV_cv_fighter_equipment_1_desc:0 "The I-153 was chosen as a replacement for the I-15 because it had again a gulled wing design and a retractable landing gear, although the aircraft was faster than the preceding I-15 and so the  wings had to be lengthened to get a lower stall speed. It was fitted with external fuel tanks under the wings to increase range. The armament consisted of four 7.62mm  ShKAS machine guns."
- SOV_cv_fighter_equipment_2:0 "Yak-1-N Carrier Fighter"
- SOV_cv_fighter_equipment_2_short:0 "Yak-1-N Carrier Fighter"
+ SOV_cv_fighter_equipment_2:0 "Yakovlev Yak-1-N Carrier Fighter"
+ SOV_cv_fighter_equipment_2_short:0 "Yak-1-N CV Fighter"
  SOV_cv_fighter_equipment_2_desc:0 "Since the LaGG-1-N was considered a failure  and the Yak-1 was smaller and even lighter it was chosen as replacement. It had a relatively high stall speed in comparison to e.g. the  Bf-109E so the wings and flaps had to be considerably more enlarged than for the conversion from the Bf-109E to the Bf-109T version. The Yak-1 had a especially light tail, and it was easy to tip over and to hit the ground with the propeller. Often, technicians had to keep the tail down, which could lead to accidents, with aircraft taking off with technicians still on the rear fuselage. Later added weights fixed that. The armament was - especially compared to the LaGG-1 - lighter with a single 20mm ShVAK cannon and one 12.7mm Berezin UBS machine gun but it was a certainly better plane than the LaGG."
- SOV_cv_fighter_equipment_3:0 "Yak-3-N Carrier Fighter"
- SOV_cv_fighter_equipment_3_short:0 "Yak-3-N Carrier Fighter"
+ SOV_cv_fighter_equipment_3:0 "Yakovlev Yak-3-N Carrier Fighter"
+ SOV_cv_fighter_equipment_3_short:0 "Yak-3-N CV Fighter"
  SOV_cv_fighter_equipment_3_desc:0 "This improved version was considerably better than the already excellent Yak-1 and was even lighter than the Yak-1. The armament was slightly improved by adding a 12.7mm Berezin UBS machine gun to the existing UBS and ShVAK. It was powerful and easy to get off the carrier in any wind. "
  
- SOV_cv_nav_bomber_equipment_1:0 "SB-2-N Carrier  Bomber"
+ SOV_cv_nav_bomber_equipment_1:0 "SB-2-N Carrier Bomber"
  SOV_cv_nav_bomber_equipment_1_short:0 "SB-2-N CV-bomber"
  SOV_cv_nav_bomber_equipment_1_desc:0 "After seeing a twin engined Potez 565 land on the french carrier Bearn in 1936  Tupolev wanted to do the same. The ANT-41 based on the SB with a similar layout but was larger and more powerful. It had to be lightened, structurally reinforced and the wings enlarged for carrier operation and its Mikulin AM-34 engines providing a maximum speed of 435 km/h. It got a long weapons bay under the fuselage which  could hold two WWI 880kg  450mm TAN-12  or a single 1,700kg aerial version of the 533 mm 53-36 torpedo. It was planned to use the SB-2-N alongside the the R10-N which could not carry a torpedo. The excellent downsight from the fully englazed cockpit helped with carrier landings. The SB-2/ANT-41 held the weight record of carrier landings with a few kilos heavier than  the US Grumman Avenger  until the British even managed to start and land a 10 tons Sea Mosquito in 1947. Its range was around 2000km due to the weight restrictions of  carrier operations."
  
