--- a/bicemodded/localisation/english/combat_l_english.yml
+++ b/bicemodded/localisation/english/combat_l_english.yml
@@ -392,4 +392,6 @@
  CARRIER_PLANE_SCREEN_DETAIL:0 "Our Carrier Planes can help screen $NUM|.0H$ ships and are currently screening $NUM_2|.0H$."
  CARRIER_PLANE_SCREEN_DESC:0 "Our Carrier Planes will limit how freely the enemy can move and will thus help all our screening efforts."
  POSITIONING_CARRIER_RATIO_PENALTY:0 "More Enemy Carrier Airplanes: $NUM|+%$"
+ COMBAT_LOG_FRIENDLY: "Friendly Forces"
+ COMBAT_LOG_ENEMY: "Enemy Forces"
  
