--- a/bicemodded/localisation/english/triggers_l_english.yml
+++ b/bicemodded/localisation/english/triggers_l_english.yml
@@ -751,8 +751,10 @@
  has_same_ideology_tt_NOT:0 "Does NOT have the same §YIdeology§! as §Y[ROOT.GetFlag] [ROOT.GetNameDef]§!\n"
  TRIGGER_HAS_CHARACTER:0 "$NAME|Y$ is active in this country"
  TRIGGER_NOT_HAS_CHARACTER:0 "$NAME|Y$ is not active in this country"
- TRIGGER_CANT_BE_COUNTRY_LEADER:0 "$NAME|Y$ cannot become the leader of this country"
- TRIGGER_CAN_BE_COUNTRY_LEADER:0 "$NAME|Y$ can become the leader of this country"
+ TRIGGER_IS_CHARACTER: "is the same character as $INPUTNAME|Y$"
+ TRIGGER_NOT_IS_CHARACTER: "is not the same character as $INPUTNAME|Y$"
+ TRIGGER_CANT_BE_COUNTRY_LEADER:1 "$NAME|Y$ cannot become country leader"
+ TRIGGER_CAN_BE_COUNTRY_LEADER:1 "$NAME|Y$ can become country leader"
  TRIGGER_HAS_TERRAIN:0 "Has terrain $TYPE|H$"
  TRIGGER_HAS_NOT_TERRAIN:0 "Has not terrain $TYPE|H$"
  TRIGGER_ANY_CHARACTER_STARTS:0 "Any Character"
@@ -791,6 +793,8 @@
  TRIGGER_HAS_AIR_LEDGER:0 "Has an air ledger"
  TRIGGER_HAS_NOT_CHARACTER_SLOT:0 "$CHARACTER$ does not have character slot $SLOT|H$"
  TRIGGER_HAS_CHARACTER_SLOT:1 "$CHARACTER$ has character slot $SLOT|H$"
+ TRIGGER_CAN_BE_FIRED: "$SLOT$can be fired"
+ TRIGGER_CANT_BE_FIRED: "$SLOT$can't be fired"
  french_communist_civil_war_intervention_tt:0 "Both of the following are true:\n    At War\n    Not actively intervening in the Spanish Civil War"
  TRIGGER_HAS_IDEOLOGY:1 "$NAME|Y$ has ideology $IDEOLOGY|Y$"
  TRIGGER_HAS_NOT_IDEOLOGY:1 "$NAME|Y$ does not have ideology $IDEOLOGY|Y$"
@@ -874,6 +878,8 @@
  TRIGGER_PC_DOES_STATE_NOT_STACK_DEMILITARIZED:0 "State did not get stacked demilitarize in the peace conference"
  TRIGGER_PC_IS_NOT_CLAIMED_AND_TAKEN_BY: "Is not claimed and taken by $COUNTRY$" ##NEVER DISPLAYED OUTSIDE DEBUG
  TRIGGER_PC_IS_CLAIMED_AND_TAKEN_BY: "Is claimed and taken by $COUNTRY$" ##NEVER DISPLAYED OUTSIDE DEBUG
+ TRIGGER_PC_IS_CLAIMED: "Is claimed"
+ TRIGGER_PC_IS_NOT_CLAIMED: "Is not claimed"
 
  BOMBING_WAR_SUPPORT_TRIGGER:0 "War Support Malus from Bombing"
  CASUALTIES_WAR_SUPPORT_TRIGGER:0 "War Support Malus from Casualties"
