--- a/bicemodded/localisation/english/effects_l_english.yml
+++ b/bicemodded/localisation/english/effects_l_english.yml
@@ -153,6 +153,8 @@
  EFFECT_ADD_ADVISOR_ROLE:0 "$NAME|H$ becomes a $TYPE$ with the effect:\n$DESC$\n"
  EFFECT_ADD_ADVISOR_ROLE_APPOINT:0 "$NAME|H$ becomes a $TYPE$ with the effect:\n$DESC$\nand is directly hired.\n"
  EFFECT_REMOVE_ADVISOR_ROLE:0 "$NAME|H$ stops being a $TYPE$.\n"
+ EFFECT_SET_CAN_BE_FIRED: "$CHARACTER|H$$SLOT$now can be fired"
+ EFFECT_SET_CANNOT_BE_FIRED: "$CHARACTER|H$$SLOT$now cannot be fired"
  EFFECT_REMOVE_UNIT_LEADER_ROLE:0 "$NAME|H$ stops being a $TYPE$.\n"
  EFFECT_RECRUIT_CHARACTER:0 "Recruit $NAME|H$"
  EFFECT_RETIRE_CHARACTER:0 "Retire $NAME|H$ from $COUNTRY|Y$"
