fix the problems in the error log fix todo list entries

--- a/bicemodded/localisation/english/victory_points_l_english.yml
+++ b/bicemodded/localisation/english/victory_points_l_english.yml
@@ -201,7 +201,7 @@
  VICTORY_POINTS_6380:0 "Moscow"
  VICTORY_POINTS_525:0 "Kiev"
  VICTORY_POINTS_3529:0 "Stalingrad"
- VICTORY_POINTS_3151:0 "Leningrad "Urban""
+ VICTORY_POINTS_3151:0 "Kronstadt"
  VICTORY_POINTS_6474:0 "Donetsk"
  VICTORY_POINTS_9417:0 "Rostov"
  VICTORY_POINTS_11375:0 "Gorki"
@@ -720,7 +720,7 @@
  VICTORY_POINTS_6724:0 "Simferopol"
  VICTORY_POINTS_12298:0 "Orenburg"
  VICTORY_POINTS_6167:0 "Rybinsk"
- VICTORY_POINTS_6174:0 "Leningrad "Harbor""
+ VICTORY_POINTS_6174:0 "Leningrad"
  VICTORY_POINTS_6445:0 "Taganrog"
  VICTORY_POINTS_6124:0 "Kirov"
  VICTORY_POINTS_8040:0 "Hamadan"
