--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -704,7 +704,7 @@
  construction5:0 "Construction V"
  construction5_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible."
  construction6:0 "Construction VI"
- construction6_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible."
+ construction6_desc:0 "Electrification of our constrction has made it possible for us to apply new technologies that will make improve our construction capabilities"
  
  defence_works0:0 "Defence Works 0"
  defence_works0_desc:0 "Entrenchment techniques from the last Century. Proven but slow."
@@ -745,7 +745,7 @@
  pre_fab5:0 "Pre-Fabrication V"
  pre_fab5_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible so it is easier to construct the land forts and coastal forts at an even higher speed."
  pre_fab6:0 "Pre-Fabrication VI"
- pre_fab6_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible so it is easier to construct the land forts and coastal forts at an even higher speed."
+ pre_fab6_desc:0 "Electrification of our fortifications has made it possible for us to apply new technologies that will allow for implementations of new technologies in our forts"
  
  infra_works0:0 "Infrastructural Works 0"
  infra_works0_desc:0 "Building techniques from the last Century. Proven but slow"
@@ -760,7 +760,7 @@
  infra_works5:0 "Infrastructural Works V"
  infra_works5_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible and to construct infrastructure, both civilian and military, even at the highest rate."
  infra_works6:0 "Infrastructural Works VI"
- infra_works6_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible and to construct infrastructure, both civilian and military, even at the highest rate."
+ infra_works6_desc:0 "Electrification of our infrastructure sector has made it possible for us to apply new technologies that will make improve the modernization of infrastructure"
   
  rail_infra0:0 "Railway Network 0"
  rail_infra0_desc:0 "For a hundred years the railroad was one of the most important asset in military movement and the economy. Its time that we improve on that."
@@ -775,7 +775,7 @@
  rail_infra5:0 "Railway Network V"
  rail_infra5_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible so we can deliver the goods needed to produce civilian and military assets most efficiently."
  rail_infra6:0 "Railway Network VI"
- rail_infra6_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible so we can deliver the goods needed to produce civilian and military assets most efficiently."
+ rail_infra6_desc:0 "Electrification of our rail networks has made it possible for us to apply new technologies that will make improve the modernization of railways."
  
  road_infra0:0 "Road Network 0"
  road_infra0_desc:0 "Roads allow the distribution of goods to the individual consumers but apart from cities the country mostly relies on dirt roads. Its time to change that."
@@ -790,7 +790,7 @@
  road_infra5:0 "Road Network V"
  road_infra5_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible of roads which makes our military movement at the fast possible speed."
  road_infra6:0 "Road Network VI"
- road_infra6_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible of roads which makes our military movement at the fast possible speed."
+ road_infra6_desc:0 "Electrification of our road networks has made it possible for us to apply new technologies that will make improve the modernization of roads."
  
  air_infra0:0 "Airbase 0"
  air_infra0_desc:0 "Apart from the large capital airports - which were built over tens of years - many airports consist of dirt airfields resembling flying circuses from the Great War. It's time to change that."
@@ -805,7 +805,7 @@
  air_infra5:0 "Airbase V"
  air_infra5_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible for airbases."
  air_infra6:0 "Airbase VI"
- air_infra6_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible for airbases."
+ air_infra6_desc:0 "Electrification of our aerospace sector has made it possible for us to apply new technologies that will make airports more effecient."
  
  port_infra0:0 "Dockyards 0"
  port_infra0_desc:0 "Improved methods and materials allow us to construct dockyards faster and to build our ships quicker."
@@ -820,7 +820,7 @@
  port_infra5:0 "Dockyards V"
  port_infra5_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible for dockyards."
  port_infra6:0 "Dockyards VI"
- port_infra6_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible for dockyards."
+ port_infra6_desc:0 "Electrification of our martime sector has made it possible for us to apply new technologies that will make dockyards more productive."
  
  civ_works:0 "Civilian Works I"
  civ_works_desc:0 "By improving civil services and the living conditions of our people the civil unrest decreases."
@@ -833,18 +833,20 @@
  civ_works5:0 "Civilian Works V"
  civ_works5_desc:0 "The future of efficient civil management will require more extensive planning for individual projects as well as standardized solutions wherever possible."
  civ_works6:0 "Civilian Works VI"
- civ_works6_desc:0 "The future of efficient civil management will require more extensive planning for individual projects as well as standardized solutions wherever possible."
+ civ_works6_desc:0 "Electrification of our welfare sector has made it possible for us to apply new technologies that will improve our people's living conditions."
  
  housing_work:0 "Agricultural Advances I"
  housing_work_desc:0 "Improved methods and materials allow us to modernize our manpower intensive agriculture and thus free up manpower. It also provides the industry with hardworking people."
  housing_work2:0 "Agricultural Advances II"
  housing_work2_desc:0 "Modernizing our tools and equipment will further aid our agriculture workers freeing up precious manpower."
  housing_work3:0 "Agricultural Advances III"
- housing_work3_desc:0 "Agricultural Advances"
+ housing_work3_desc:0 "doption of modern vehicles and experience from our advancements agriculture can be applied to make our farms even better and more efficient."
  housing_work4:0 "Agricultural Advances IV"
  housing_work4_desc:0 "A higher degree of mechanization and better routines further improves agriculture and frees up manpower."
  housing_work5:0 "Agricultural Advances V"
  housing_work5_desc:0 "The future of efficient agriculture will require more motorization but will free up manpower."
+ housing_work6:0 "Agricultural Advances VI"
+ housing_work6_desc:0 "Electrification of our agriculture sector has made it possible for us to apply new technologies that will make farms more productive."
  
  hospital_work:0 "Health Care System I"
  hospital_work_desc:0 "Improved methods and materials allow us to construct better hospitals and provide triage and health care to civilians and soldiers alike. Our experienced manpower is precious, so lets keep them alive."
@@ -856,6 +858,8 @@
  hospital_work4_desc:0 "A higher degree of mechanization and better routines further improves building construction speeds to make our hospitals even better and more efficiently."
  hospital_work5:0 "Health Care System V"
  hospital_work5_desc:0 "The future of efficient construction will require more extensive planning for individual projects as well as standardized solutions wherever possible for our hospitals to operate at their best and most efficient way."
+ hospital_work6:0 "Health Care System VI"
+ hospital_work6_desc:0 "Electrification of our medical sector has made it possible for us to apply new technologies that will make hosptials more productive."
  
  schools_work:0 "Education System I"
  schools_work_desc:0 "Improvements to science and applied methods allow us to have better education and training centres. Research Facilities and Officer schools greatly profit from that. By applying new theoretical knowledge to existing traditional organizations will lead to much needed reforms."
@@ -867,7 +871,9 @@
  schools_work4_desc:0 "A higher degree of applied sciences and better routines further improves quality of our schooling and training centres for the military so they can teach, learn and train the soldiers even better and more efficiently."
  schools_work5:0 "Education System V"
  schools_work5_desc:0 "The future of education will require more extensive planning for individual projects as well as standardized solutions wherever possible for our schooling and training-centre for the military so they can teach, learn and train the soldiers most efficiently."
-  
+ schools_work6:0 "Education System VI"
+ schools_work6_desc:0 "Electrification of our educational sector has made it possible for us to apply new technologies that will make schools more productive."
+
  excavation1:0 "Excavation I"
  excavation1_desc:0 "Advancements in drilling techniques allows us to excavate resources that were impossible to reach earlier."
  excavation2:0 "Excavation II"
@@ -879,6 +885,10 @@
  excavation5:0 "Excavation V"
  excavation5_desc:0 "Advancements in fields such as surface mining gives us a greater yield of resources from our current extraction sites."
  excavation_tech:0 "Excavation Technologies"
+ excavation6:0 "Excavation VI"
+ excavation6_desc:0 "Development of new equipment along with improvements to old ones allow us to mine for resources at a greater rate."
+ excavation_tech:0 "Excavation Technologies"
+ 
  electronic_mechanical_engineering:0 "Electronic Mechanical Engineering"
  electronic_mechanical_engineering_desc:0 "We live in an age when electrical machines can no longer only warm and light us, but help us think and communicate. Electronics will be key to military intelligence in the coming century."
  
@@ -1539,10 +1549,10 @@
  DAYS_SAVED_RESEARCH_DESC:0 "Days saved: $DAYS|0G$\n"
  NO_RESEARCH_PENALTY:0 "§GTech is current - no research penalty§!"
  FINISHED_RESEARCH_POPUP_DESC:0 "...and $NUM|H$ additional effects. See Details."
- superartillery2_2:0 "Reload crew training"
- superartillery2_2_desc:0 ""
- superartillery3_2:0 "Projectile aerodynamics"
- superartillery3_2_desc:0 ""
+ superartillery2_2:0 "Armor Piercing Rounds"
+ superartillery2_2_desc:0 "The development of armor piercing munitions for these behemoths will allow us to more easily penetrate and destroy enemy fortifications."
+ superartillery3_2:0 "Projectile Aerodynamics"
+ superartillery3_2_desc:0 "Making our shells more aerodynamic will give them more kinetic energy, increasing their speed and power."
  motorised_infantry1:0 "Improved truck I"
  motorised_infantry1_desc:0 "A more rugged truck can go faster on rough roads."
  motorised_infantry2:0 "Improved truck II"
